refactoring for multi instance usage